# gaeb-platform

./: .env.example  .gitignore  Justfile  main.py  pyproject.toml
services/api/: pyproject.toml
services/api/src/api/: app.py  auth.db  crud.py  database.py  setup_db.py
services/api/src/api/auth/: auth.py  models.py
services/upload-client/: pyproject.toml
services/upload-client/src/upload_client/: __init__.py  main.py
