[project]
name = "gaeb-platform"
version = "0.1.0"
description = "Workspace for GAEB platform (libs + services)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["beautifulsoup4>=4.14.2", "gaebio", "lxml>=6.0.1"]

[tool.uv.workspace]
members = ["packages/*", "services/*"]

[tool.uv.sources]
gaebio = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.4.2"]
