[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Leon Weimann", email = "nachhilfe@leonweimann.de" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "gaebio",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
gaebio = { workspace = true }
