[project]
name = "upload-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Leon Weimann", email = "nachhilfe@leonweimann.de" }]
requires-python = ">=3.13"
dependencies = ["gaebdb", "gaebio", "numpy>=2.3.3"]

[project.scripts]
upload-client = "upload_client:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
gaebio = { workspace = true }
gaebdb = { workspace = true }
